--- a/test/less/animate.css/index.html
+++ b/test/less/animate.css/index.html
@@ -6,25 +6,38 @@
 	<link rel="stylesheet" href="activity.css">
 
 	<style>
-		#title{
+		.title{
 			position: absolute;
-			top: 30%;
-			left: 30%;
+			top: 10%;
+			left: 10%;
 			color: orange;
 
 			-webkit-animation-duration: 3s;
 			-webkit-animation-delay: 1s;
 		}
+		.title:nth-child(1){ top: 15%; left: 20%;}
+		.title:nth-child(2){ top: 20%; left: 30%;}
+		.title:nth-child(3){ top: 25%; left: 40%;}
+		.title:nth-child(4){ top: 30%; left: 50%;}
+		.title:nth-child(5){ top: 35%; left: 60%;}
+		.title:nth-child(6){ top: 40%; left: 70%;}
   	</style>
 </head>
 <body>
-	<h1 id="logo">星美国际电影影城</h1>
+	<h1 class="title">星美国际电影影城</h1>
+	<h1 class="title">ipiao</h1>
+	<h1 class="title">翼虎网</h1>
+	<h1 class="title">百度</h1>
+	<h1 class="title">新浪微博</h1>
+	<h1 class="title">腾讯</h1>
+	<h1 class="title">网易轻松一刻</h1>
+	
   		<script src="http://cdn.staticfile.org/jquery/2.1.1-rc2/jquery.min.js"></script>
   		<script>
   			(function($){
-  				$("#title").addClass("animated flip")
+  				$(".title").addClass("animated hinge")
   							.one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
-  								$(this).removeClass();
+  								$(this).removeClass("animated hinge").addClass('flip');
   							});
   			})(jQuery);
   		</script>
